# serialstudio-rs

./: Cargo.toml  README.md
.github/workflows/: build.yml
examples/: random.rs
src/: data.rs  friendly.rs  lib.rs
