[package]
name = "serialstudio"
version = "0.1.0"
authors = ["Evan Pratten <ewpratten@gmail.com>"]
edition = "2018"
license-file = "LICENSE"
readme = "README.md"
git = "https://github.com/Ewpratten/serialstudio-rs"
description = "A simple Rust library to act as a data source for Serial Studio"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = { verison = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
